<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_main">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/paddingTop_layout_screen"
        android:paddingLeft="@dimen/paddingLeft_layout_screen"
        android:paddingRight="@dimen/paddingRight_layout_screen"
        tools:context="com.nguyen.thanhlong.chosmartphone.SignInScreenActivity">

        <TextView
            android:id="@+id/tvTitleSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tvTitleSignIn"
            android:textSize="@dimen/textSizetvTitleSignIn"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="#f3f5f7"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/etEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etEmailSignIn"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#61a5e9"
            android:textColorHint="#ffffff">

            <EditText
                android:id="@+id/etPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etPasswordSignIn"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btnLogin"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/round_bg_button1"
            android:textSize="@dimen/textSize_btnLogin"
            android:textColor="@color/textColor_btnLogin" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btnForgotPassword"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textStyle="normal"
            android:background="@drawable/round_bg_button2"
            android:textSize="@dimen/textSize_btnForgotPassword"
            android:textColor="@color/textColor_btnFortgotPassword"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:text="@string/text_btnSignUp"
                    android:textColor="@color/textColor_btnSignUp"
                    android:background="@drawable/round_bg_button3" />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</ScrollView>

