<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_main">

    <RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/appbar_padding_top"
        android:background="@drawable/bg_gradient_2"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivBackSignUp"
            android:layout_width="@dimen/size_logo_back"
            android:layout_height="@dimen/size_logo_back"
            android:src="@drawable/logo_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_title"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_title"/>

    </RelativeLayout>

    <ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_below="@id/rl3">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_sign_up_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/paddingTop_layout_screen"
        android:paddingLeft="@dimen/paddingLeft_layout_screen"
        android:paddingRight="@dimen/paddingRight_layout_screen"

        android:orientation="vertical"
        tools:context="com.nguyen.thanhlong.chosmartphone.SignUpScreenActivity">

        <TextView
            android:id="@+id/tvTitleSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tvTitleSignUp"
            android:textSize="@dimen/textSizetvTitleSignUp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="#fff"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/etNameSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etNameSignUp"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/etPhoneSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etPhoneSignUp"
                android:layout_marginTop="10dp"
                android:inputType="number|phone"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/etAddressSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etAddressSignUp"
                android:layout_marginTop="10dp"
                android:inputType="textLongMessage"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/etEmailSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etEmailSignUp"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="#fff"
            app:passwordToggleTint="#fff">

            <EditText
                android:id="@+id/etPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etPasswordSignUp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="#fff"
            app:passwordToggleTint="#fff">

            <EditText
                android:id="@+id/etRetypePasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etRetypePasswordSignUp"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:textColor="#fff"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btnComplete"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/round_bg_button1"
            android:textSize="@dimen/textSize_btnComplete"
            android:textColor="@color/textColor_btnComplete"
            android:layout_marginBottom="@dimen/paddingRight_layout_screen"/>

    </LinearLayout>

</ScrollView>

</RelativeLayout>

