<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/round_bg_dialog_change_information"
    android:layout_margin="@dimen/paddingRight_layout_screen">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/appbar_padding_top"
        android:layout_marginRight="@dimen/appbar_padding_top"
        android:layout_marginTop="@dimen/appbar_padding_top">

        <EditText
            android:id="@+id/etChangeInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_text_here"
            android:textColor="#fff"/>

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/appbar_padding_top">

        <Button
            android:id="@+id/btnCancelChangeInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_close_dialog"
            android:background="@color/transparent"
            android:textColor="@color/green"/>


        <Button
            android:id="@+id/btnAgreeChangeInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree_exit_dialog"
            android:background="@color/transparent"
            android:textColor="@color/green"/>

    </LinearLayout>

</LinearLayout>
