<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/appbar_padding_top"
        android:background="@drawable/bg_gradient_2">

        <ImageView
            android:id="@+id/ivBackPasswordReset"
            android:layout_width="@dimen/size_logo_back"
            android:layout_height="@dimen/size_logo_back"
            android:src="@drawable/logo_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_title"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_title"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/paddingTop_layout_screen"
        android:paddingLeft="@dimen/paddingLeft_layout_screen"
        android:paddingRight="@dimen/paddingRight_layout_screen">

        <TextView
            android:id="@+id/tvTitlePasswordReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tvTitlePasswordReset"
            android:textSize="@dimen/textSizetvTitleSignIn"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmailPasswordReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etEmailPasswordReset"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btnResetPassword"
            android:layout_marginTop="25dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/round_bg_button1"
            android:textSize="@dimen/textSize_btnLogin"
            android:textColor="@color/textColor_btnLogin" />

    </LinearLayout>


</LinearLayout>
