<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_main">

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/appbar_padding_top"
        android:background="@drawable/bg_gradient_2"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/ivBackChangePassword"
            android:layout_width="@dimen/size_logo_back"
            android:layout_height="@dimen/size_logo_back"
            android:src="@drawable/logo_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_title"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/text_size_title"/>

    </RelativeLayout>

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_below="@id/rl4">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/paddingTop_layout_screen"
        android:paddingLeft="@dimen/paddingLeft_layout_screen"
        android:paddingRight="@dimen/paddingRight_layout_screen">

        <TextView
            android:id="@+id/tvTitleChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tvTitleChangePassword"
            android:textSize="@dimen/textSizetvTitleSignIn"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="@dimen/appbar_padding_top"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/etNewPasswordChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etNewPasswordChangePassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:passwordToggleTint="@color/white">

            <EditText
                android:id="@+id/etRetypePasswordChangePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_etRetypePasswordChangePassword"
                android:inputType="textPassword"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnAgreeChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_btnAgreeChangePassword"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:background="@drawable/round_bg_button1"
            android:textSize="@dimen/textSize_btnLogin"
            android:textColor="@color/textColor_btnLogin" />

    </LinearLayout>

</ScrollView>

</RelativeLayout>